// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteAdminCustomerBillingLink linked billing account 1`] = `
<DocumentFragment>
  <div
    class="site-admin-customer-billing-link"
  >
    <div
      class="d-flex align-items-center"
    >
      <a
        class="anchorLink mr-2 d-flex align-items-center"
        href="https://example.com"
      >
        View customer account 
        <externallinkicon
          class="iconInline ml-1"
        />
      </a>
      <button
        class="btn btnSecondary"
        type="button"
      >
        Unlink
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SiteAdminCustomerBillingLink no linked billing account 1`] = `
<DocumentFragment>
  <div
    class="site-admin-customer-billing-link"
  >
    <div
      class="d-flex align-items-center"
    >
      <button
        class="btn btnSecondary"
        type="button"
      >
        Link billing customer
      </button>
    </div>
  </div>
</DocumentFragment>
`;
